# Project-1

./: .gitignore  Deliverable_2_Report.md  deliverable_1 (1).py  deliverable_1.py  main.py  pyproject.toml  scorer.py
deliverable3/: .env.example  .keep  README.md  main.py
deliverable3/credibility_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
